# deplight-platform

./: .gitignore  README.md  backend_plan_20251104.md  backend_plan_251103.md  deployment_system.md
lamp_admin_mcp/: .gitignore  README.md  pyproject.toml
lamp_admin_mcp/.github/ISSUE_TEMPLATE/: bug_report.md
lamp_admin_mcp/.github/workflows/: build-pub-plain-raw.yaml  build-pub-plain.yaml  build-pub-uv-raw.yaml  build-pub-uv.yaml
lamp_admin_mcp/requirements/: requirements_base.txt  requirements_dev.txt  requirements_tool.txt
lamp_admin_mcp/src/lamp_admin_cli/: __init__.py  cli_logics.py  configure.py  mcp_server.py  settings.py  utils.py  validation.py
lamp_admin_mcp/src/lamp_admin_cli/inhouse/: cli_logics.py  endpoint_spec.py  github.py  model_spec.py
lamp_admin_mcp/src/lamp_admin_cli/inhouse/mlbo/: client.py  migrations.py
lamp_admin_mcp/src/lamp_admin_cli/inhouse/template/: .env.core.example  default_values.yaml  metadata.{{ stage }}.yaml.jinja2
letsur-serving-app-fastapi/: .env.core  .env.example  .env.tpl  .env.tpl.example  .env.values.yaml.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  copier.yaml  description.md  docker-compose.dev.yaml  docker-compose.local.yaml  docker-compose.sh  docker-compose.yaml  pyproject.toml  pytest.ini
letsur-serving-app-fastapi/.copier/: init_pyproject.py  update_dotenv.py
letsur-serving-app-fastapi/.github/ISSUE_TEMPLATE/: 어째서-default-issue-assignee가-없는-것일까요-.md
letsur-serving-app-fastapi/.github/workflows/: docker-push-manual.yaml  docker-push-on-release.yaml
letsur-serving-app-fastapi/docs/: ai-engineers-guide.md  architecture.md  cli-scripts.md  constraints-and-notes.md
letsur-serving-app-fastapi/requirements/: requirements_base.txt  requirements_dev.txt
letsur-serving-app-fastapi/scripts/: cli.py
letsur-serving-app-fastapi/scripts/commands/: envs_render.py  generate_envs.py  generate_openapi.py
letsur-serving-app-fastapi/src/: dataclasses.py  exceptions.py  settings.py
letsur-serving-app-fastapi/src/_core/: __init__.py  _assert.py  app.py  celery.py  contextvars.py  debug.py  decorators.py  middleware.py  quota.py  settings.py  static.py  utils.py
letsur-serving-app-fastapi/src/_core/client/: httpx.py  httpx_async.py  triton.py  triton_async.py  utils.py
letsur-serving-app-fastapi/src/_core/dataclasses/: __init__.py  _internal.py  base.py
letsur-serving-app-fastapi/src/_core/dataclasses/file/: base.py  (+2 more)
letsur-serving-app-fastapi/src/_core/exceptions/: __init__.py  base.py  handlers.py
letsur-serving-app-fastapi/src/_core/logger/: __init__.py  access_logger.py  logger_base.py  logger_utils.py  serving_logger.py
letsur-serving-app-fastapi/src/_core/redis/: redis_client.py  utils.py
letsur-serving-app-fastapi/src/_core/tracing/: __init__.py  decorators.py  settings.py
letsur-serving-app-fastapi/src/_core/worker/: app_init.py  celery.py  middleware.py  utils.py
letsur-serving-app-fastapi/src/routers/: main.py
letsur-serving-app-fastapi/src/tests/: conftest.py  test_invocations.py
(+56 files in other folders)
